 2014-05-16 13:01  hvlad 
   M src/jrd/validation.cpp
Correct format specifiers

 2014-05-15 22:06  hvlad 
   M src/jrd/GlobalRWLock.cpp
Fixed bug CORE-4433 : GlobalRWLock could not downgrade EX lock to SH if readers is present

 2014-05-15 22:05  hvlad 
   M src/jrd/cch.cpp
   M src/jrd/jrd.cpp
   M src/jrd/nbak.cpp
   M src/jrd/nbak.h
1. Improvement CORE-4431 : Reduce contention for allocation table lock while database is in stalled physical backup state
2. Improvement CORE-4432 : Let attachments to not block others when allocation table is read first time
3. On Windows, file can not be deleted while system writes cached data into it, even if file is not open by anyone.
Therefore flush delta file implicitly before closing it.

 2014-05-12 09:44  paulbeach 
   M builds/install/arch-specific/darwin/embed.darwin
Correct a problem with locating intl dylibs

 2014-04-25 11:01  alexpeshkoff 
   M src/jrd/svc.cpp
   M src/jrd/svc.h
Minimal fix for CORE-4303: Possible races while Service destruction

 2014-04-24 11:43  paulbeach 
   M src/jrd/os/darwin/mod_loader.cpp
Fix typo in debug routine

 2014-04-19 07:34  hvlad 
   M src/jrd/os/win32/mod_loader.cpp
Missed return

 2014-04-16 13:13  hvlad 
   M src/jrd/os/mod_loader.h
   M src/jrd/os/win32/mod_loader.cpp
   M src/jrd/unicode_util.cpp
Load icuin30.dll from the same folder as already loaded icuuc30.dll.
It should fix CORE-3183 : FBEmbed.dll does not load icuin30.dll from same folder as itself (icudt30.dll, icuuc30.dll load OK)

 2014-04-08 08:18  hvlad 
   M src/jrd/req.h
Avoid issues with not initialized members of record_param.

 2014-04-05 18:08  dimitr 
   M src/jrd/dfw.epp
Simplest solution for CORE-4386: Report more details for "object in use" errors. Also, I've removed the database filename from the error message for security reasons. v3 is going to get a more complete solution.

 2014-04-04 08:52  hvlad 
   M src/jrd/exe.cpp
Wrong code was committed (for CORE-4252), sorry

 2014-04-04 08:37  hvlad 